2009-05-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Silence an escaped debug fprintf.  Bugfix.

2008-05-25  Peter Hedwig  <peter@affenbande.org>

	* src/Makefile.am term/lua/ChangeLog term/lua/gnuplot.lua
	 term/lua/gnuplot-lua-tikz.sty term/lua/gnuplot-tikz.help
	 term/lua/gnuplot-tikz.lua term/lua/NEWS term/lua.trm:

	Rearrange internal documentation, improved error handling,
	remove the "script" keyword (script name is now mandatory).
2009-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: Broken format specifier.
	Bug #2750114

2009-05-05  Peter Gasparovic  (buteo@users.sourceforge.net)

	* term/PostScript/cp1250.ps:  Fix code points for Lcaron, lcaron.
	Bug #2785002

2009-05-05  Thomas Sefzick (thse@users.sourceforge.net)

	* term/pslatex.trm: 'set epslatex ... blacktext' was producing white
	text for tics labels, axis labels, key labels, but black title text.
	Bug #2750114

2009-04-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Filled boxes and filled polygons have different
	behaviour when the fillstyle is FS_DEFAULT, but the x11 driver was
	not making this distinction. (caused by patch of 2008-06-22).

2009-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	Release 4.2.5

2009-03-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Reserve room for user tic labels even if
	the format for autoticks is "".

	* src/set.c (load_tics) src/save.c (save_tics):  Do not save or restore
	axis tic labels that were read from a data file.
	Bug #2711994

2009-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Fix bug that caused the left/right margin
	offsets to be applied twice, leading to too-wide margins.
	Bug #2714997

2009-03-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history_list): Indexing istart from 1 otherwise
	"history" command (without arguments) does not work.
